yaml/istio/bk/k8ui-v2.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: k8uiworkshop-deploy-v2
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      name: k8uiworkshop-v2
      zone: prod
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: k8uiworkshop-v2
        version: v2
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
    spec:
      containers:
        - name: k8uiworkshop-ctr
          image: metamagicglobal/k8uiworkshop:v1.2
          imagePullPolicy: Always
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8uiworkshopservice-v2
  namespace: shoppingportal
spec:
  selector: 
    name: k8uiworkshop-v2
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
    name: http
