yaml/istio/bk/product-v2-canary-using-weigth.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-v2-canary
  namespace: shoppingportal    
spec:
  host: productservice.shoppingportal.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productservice-vs
  namespace: shoppingportal   
spec:
  hosts:
  - "*"
  gateways:
  - shoppingportal-gateway
  http:
  - route:
    - destination:
        host: productservice.shoppingportal.svc.cluster.local
        subset: v2 # match v2 only
        port:
          number: 80
      weight: 10
  - route: 
    - destination:
        host: productservice.shoppingportal.svc.cluster.local
        subset: v1 # match v1 only
        port:
          number: 80
      weight: 90
