yaml/istio/bk/product-v3-canary-using-headers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-v2-canary
  namespace: shoppingportal    
spec:
  host: productservice.shoppingportal.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shoppingportal-vs
  namespace: shoppingportal   
spec:
  hosts:
  - "*"
  gateways:
  - shoppingportal-gateway
  http:
  - match:
    - headers:
        end-user:
          exact: metamagic
    route:
    - destination:
        host: productservice.shoppingportal.svc.cluster.local
        subset: v2 # match v2 only
        port:
          number: 80
  - route: 
    - destination:
        host: productservice.shoppingportal.svc.cluster.local
        subset: v1 # match v1 only
        port:
          number: 80
