yaml/istio/bk/shoppoingportal-gw.1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shoppingportal-gateway
  namespace: shoppingportal  
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
     - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shoppingportal-vs
  namespace: shoppingportal  
spec:
  hosts:
   - "*"
  gateways:
  - shoppingportal-gateway
  http:
  - match:
    - uri:
        prefix: /productms
    route:
    - destination:
        host: productservice.shoppingportal.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /productreviewms
    route:
    - destination:
        host: productreviewservice.shoppingportal.svc.cluster.local
        port:
          number: 80
